logo and phone margin

--- a/pages/homepage/main.html
+++ b/pages/homepage/main.html
@@ -20,38 +20,31 @@
 <body>
 <header id="top">
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark" >
-        <a class="navbar-brand" href="#" style="margin-left: 5%">PRODUCT LOGO</a>
+        <a class="navbar-brand" href="#" style="margin-left: 10%">
+            <img style="background-size: auto; width: 130px; height: 70PX; background-repeat: no-repeat;"
+                 src="https://www.alir.eu/uploads/monthly_2018_01/Logo.png.b29bb8e8779168ebf59eae26e492dadb.png"
+                 alt="ALIR">
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
-            <!--<ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Disabled</a>
-                </li>
-            </ul>-->
             <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex " style="margin-right: 7%">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">LINK</a>
+                    <a class="nav-link" href="#">FORUM</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">LINK</a>
+                    <a class="nav-link" href="#">GUIDA</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">LINK</a>
+                    <a class="nav-link" href="#">REGOLE</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">LINK</a>
+                    <a class="nav-link" href="#">AIUTO</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">LINK</a>
+                    <a class="nav-link" href="#">DONAZIONI</a>
                 </li>
             </ul>
         </div>
@@ -135,19 +128,19 @@
     <div class="container carousel">
         <!-- Example row of columns -->
         <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-3 pagec">
                 <a href="#" class="btn btn-outline-light btn-lg btn-block" role="button" aria-pressed="true"><i
                         class="fas fa-comments"></i> Forum</a>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3 pagec">
                 <a href="#" class="btn btn-outline-light btn-lg btn-block" role="button" aria-pressed="true"><i
                         class="fas fa-book "></i> Regolamento</a>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3 pagec">
                 <a href="#" class="btn btn-outline-light btn-lg btn-block" role="button" aria-pressed="true"><i
                         class="fas fa-compass"></i> Guida</a>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3 pagec">
                 <div id="socialDiv" style="min-height: 72px; width: 100%;">
                     <span class="social-aliricons">
                         <span class="aliricon aliricon-facebook">
