--- a/pages/homepage/main.html
+++ b/pages/homepage/main.html
@@ -275,6 +275,18 @@
                         </div>
                     </div>-->
                 </div>
+                <div class="row" id="loadPost">
+                    <div class="col-md-12">
+                        <div class="card flex-md-row mb-4 box-shadow h-md-250">
+                            <div class="card-body">
+                                <div style="text-align: center; font-size: 40px">
+                                    <i class="fas fa-spinner fa-spin"></i><br>
+                                    <p>Caricamento dei post...</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <a type="button" id="backtop" href="#top" class="btn  btn-outline-light btn-lg btn-block"><i
