--- a/pages/homepage/main.html
+++ b/pages/homepage/main.html
@@ -10,7 +10,8 @@
     <!-- Page favicon -->
     <link rel="icon" href="https://i.imgur.com/SSdiFqD.png" type="image/gif"/>
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- Other CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <!-- Custom styles for this template -->
@@ -174,12 +175,19 @@
     <div class="container card">
         <!-- Example row of columns -->
         <div class="row" style="margin: 4px;">
-                <div class="col-md-6">
-
-                </div>
-                <div class="col-md-6">
-                    <i class="fas fa-server" id="alirservericon"></i> 4/300 - <i class="fas fa-server" style="color: green"></i>
-                </div>
+            <div class="col-md-2">
+                <strong class="d-inline-block">STATO SERVIZI </strong>
+            </div>
+            <div class="col-md-5">
+                <strong class="d-inline-block">Server: <span id="alirservericon"> <span class="aliruser">--</span>/<span
+                        class="alirmaxuser">100 </span></span></strong>
+                <span> Slot - Ip: <span class="aliraddress">---.---.---.--</span>:<span class="alirport">2302</span></span>
+                <a title="Connettiti al server" href="steam://rungameid/107410// +connect 145.239.149.40:2302" rel="external nofollow" style="padding-left: 5px;"><i style="" class="fas fa-external-link-alt"></i></a>
+            </div>
+            <div class="col-md-5">
+                <strong class="d-inline-block">Teamspeak: <span style="color: #4CAF50">256</span></strong> Slot - Ip: <span>TS.ALIR.EU</span>
+                <a title="Connettiti al ts" href="ts3server://ts.alir.eu" rel="external nofollow" style="padding-left: 5px;"><i style="" class="fas fa-external-link-alt"></i></a>
+            </div>
         </div>
     </div>
     <div class="container carousel">
@@ -203,43 +211,11 @@
                     <p><a class="btn btn-outline-light" href="#" role="button">Continua &raquo;</a></p>
                 </div>
                 <div class="col-md-4">
-                    <div class="card flex-md-row mb-4 box-shadow h-md-250" id="alirserver" data-toggle="modal"
-                         data-target="#serverDataModal">
-                        <div class="row">
-                            <div class="col-md-9">
-                                <div class="card-body align-items-start">
-                                    <strong class="d-inline-block">Server</strong>
-                                    <p class="card-text" style="margin-bottom: 0"><i class="fas fa-users"></i> <span
-                                            class="aliruser"></span>/<span class="alirmaxuser"></span></p>
-                                    <div class="text-muted" style="font-size: smaller">IP: <span
-                                            class="aliraddress"></span>:<span class="alirport"></span></div>
-                                </div>
-                            </div>
-                            <div class="col-md-3">
-                                <div class="card-body">
-                                    <span style="text-align: center"></span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card flex-md-row mb-4 box-shadow h-md-250" id="tsserver">
-                        <div class="row">
-                            <div class="col-md-9">
-                                <div class="card-body align-items-start">
-                                    <strong class="d-inline-block">Teamspeak</strong>
-                                    <p class="card-text" style="margin-bottom: 0"><i class="fas fa-users"></i> 69/256
-                                    </p>
-                                    <div class="text-muted" style="font-size: smaller">IP: TS.ALIR.EU</div>
-                                </div>
-                            </div>
-                            <div class="col-md-3">
-                                <div class="card-body">
-                                    <span style="text-align: center"><i style="color: green"
-                                                                        class="fas fa-server fa-4x"></i></span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <h2 class="worksans">HEADING</h2>
+                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor
+                        mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada
+                        magna mollis euismod. Donec sed odio dui. </p>
+                    <p><a class="btn btn-outline-light" href="#" role="button">Continua &raquo;</a></p>
                 </div>
             </div>
 
@@ -380,9 +356,14 @@
 </div>
 
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 <script defer src="https://alir.eu/etero/js/fontawesome5.min.js"></script>
 <script defer src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.21.0/moment.min.js"></script>
 <script defer src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.21.0/locale/it.js"></script>
