--- a/pages/homepage/main.html
+++ b/pages/homepage/main.html
@@ -182,6 +182,7 @@
                 <strong class="d-inline-block">Server: <span id="alirservericon"> <span class="aliruser">--</span>/<span
                         class="alirmaxuser">100 </span></span></strong>
                 <span> Slot - Ip: <span class="aliraddress">---.---.---.--</span>:<span class="alirport">2302</span></span>
+                <a title="Altre informazioni"  data-toggle="modal" data-target="#serverDataModal" class="infolink"><i style="" class="fas fa-info"></i></a>
                 <a title="Connettiti al server" href="steam://rungameid/107410// +connect 145.239.149.40:2302" rel="external nofollow" style="padding-left: 5px;"><i style="" class="fas fa-external-link-alt"></i></a>
             </div>
             <div class="col-md-5">
