--- a/pages/homepage/main.html
+++ b/pages/homepage/main.html
@@ -32,19 +32,19 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex " style="margin-right: 7%">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">FORUM</a>
+                    <a class="nav-link" href="https://www.alir.eu/">FORUM</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">GUIDA</a>
+                    <a class="nav-link" href="https://www.alir.eu/alirschool/">GUIDA</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">REGOLE</a>
+                    <a class="nav-link" href="https://www.alir.eu/rules/">REGOLE</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">AIUTO</a>
+                    <a class="nav-link" href="https://www.alir.eu/forum/12-supporto-giocatori/">AIUTO</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">DONAZIONI</a>
+                    <a class="nav-link" href="https://www.alir.eu/donazioni/">DONAZIONI</a>
                 </li>
             </ul>
         </div>
