add url to arma3server

--- a/pages/homepage/main.html
+++ b/pages/homepage/main.html
@@ -346,14 +346,18 @@
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item">Uptime: <span id="appendUptime"></span></li>
                             <li class="list-group-item">Rank server: <span id="alirrank"></span></li>
-                            <li class="list-group-item"></li>
-                            <li class="list-group-item"></li>
+                            <li class="list-group-item"><a href="https://www.alir.eu/alirschool/altislife/connessione-al-server-r19/">Vai alla guida alla connessione <i class="fas fa-external-link-alt"></i></a></li>
+                            <li class="list-group-item"><a id="arma3serverurl">Vai alla pagina di Arma3Server <i class="fas fa-external-link-alt"></i></a></li>
                         </ul>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+</div>
+
+<div id="appendReadModal">
+
 </div>
 
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
