--- a/pages/homepage/main.html
+++ b/pages/homepage/main.html
@@ -181,12 +181,12 @@
             <div class="col-md-5">
                 <strong class="d-inline-block">Server: <span id="alirservericon"> <span class="aliruser">--</span>/<span
                         class="alirmaxuser">100 </span></span></strong>
-                <span> Slot - Ip: <span class="aliraddress">---.---.---.--</span>:<span class="alirport">2302</span></span>
+                <span> Slot <span class="hideonphone">- Ip: <span class="aliraddress">---.---.---.--</span>:<span class="alirport">2302</span></span></span>
                 <a title="Altre informazioni"  data-toggle="modal" data-target="#serverDataModal" class="infolink"><i style="" class="fas fa-info"></i></a>
                 <a title="Connettiti al server" href="steam://rungameid/107410// +connect 145.239.149.40:2302" rel="external nofollow" style="padding-left: 5px;"><i style="" class="fas fa-external-link-alt"></i></a>
             </div>
             <div class="col-md-5">
-                <strong class="d-inline-block">Teamspeak: <span style="color: #4CAF50">256</span></strong> Slot - Ip: <span>TS.ALIR.EU</span>
+                <strong class="d-inline-block">Teamspeak: <span style="color: #4CAF50">256</span></strong> Slot <span class="hideonphone">- Ip: <span>TS.ALIR.EU</span></span>
                 <a title="Connettiti al ts" href="ts3server://ts.alir.eu" rel="external nofollow" style="padding-left: 5px;"><i style="" class="fas fa-external-link-alt"></i></a>
             </div>
         </div>
@@ -276,30 +276,30 @@
             <div class="col-6 col-md">
                 <h5><i class="fas fa-link"></i> Link utili</h5>
                 <ul class="list-unstyled text-small">
-                    <li><a class="text-muted" href="#">Forum</a></li>
-                    <li><a class="text-muted" href="#">Regolamento</a></li>
-                    <li><a class="text-muted" href="#">Guida</a></li>
-                    <li><a class="text-muted" href="#">Annunci dello staff</a></li>
-                    <li><a class="text-muted" href="#">Sviluppo del server</a></li>
-                    <li><a class="text-muted" href="#">Segnala un bug!</a></li>
+                    <li><a class="text-muted" href="https://www.alir.eu/">Forum</a></li>
+                    <li><a class="text-muted" href="https://www.alir.eu/rules/">Regolamento</a></li>
+                    <li><a class="text-muted" href="https://www.alir.eu/alirschool/">Guida</a></li>
+                    <li><a class="text-muted" href="https://www.alir.eu/forum/112-annunci/">Annunci dello staff</a></li>
+                    <li><a class="text-muted" href="https://www.alir.eu/forum/216-server/">Sviluppo del server</a></li>
+                    <li><a class="text-muted" href="https://www.alir.eu/tracker/bug-e-segnalazioni/problemi-e-bug/">Segnala un bug!</a></li>
                 </ul>
             </div>
             <div class="col-6 col-md">
                 <h5><i class="fas fa-clipboard"></i> Moduli</h5>
                 <ul class="list-unstyled text-small">
-                    <li><a class="text-muted" href="#">Richiesta di ban</a></li>
-                    <li><a class="text-muted" href="#">Richiesta di unban</a></li>
-                    <li><a class="text-muted" href="#">Richiesta di appello (6 Mesi)</a></li>
-                    <li><a class="text-muted" href="#">Richiesta di rimborso</a></li>
-                    <li><a class="text-muted" href="#">Richiesta di rimborso (Casa)</a></li>
-                    <li><a class="text-muted" href="#">Richiedi una base</a></li>
+                    <li><a class="text-muted" href="https://www.alir.eu/forms/2-richiesta-ban/">Richiesta di ban</a></li>
+                    <li><a class="text-muted" href="https://www.alir.eu/forms/3-richiesta-unban/">Richiesta di unban</a></li>
+                    <li><a class="text-muted" href="https://www.alir.eu/forms/6-appello-permabannati-dopo-6-mesi/">Richiesta di appello (6 Mesi)</a></li>
+                    <li><a class="text-muted" href="https://www.alir.eu/forms/4-richiesta-di-rimborso/">Richiesta di rimborso</a></li>
+                    <li><a class="text-muted" href="https://www.alir.eu/forms/7-richiesta-di-rimborso-abitazioni/">Richiesta di rimborso (Casa)</a></li>
+                    <li><a class="text-muted" href="https://www.alir.eu/forms/10-modulo-richiesta-base/">Richiedi una base</a></li>
                 </ul>
             </div>
             <div class="col-6 col-md">
                 <h5><i class="fas fa-user-secret"></i> Team</h5>
                 <ul class="list-unstyled text-small">
-                    <li><a class="text-muted" href="#">Lo staff</a></li>
-                    <li><a class="text-muted" href="#">Privacy policy</a></li>
+                    <li><a class="text-muted" href="https://www.alir.eu/staff/">Lo staff</a></li>
+                    <li><a class="text-muted" href="https://www.iubenda.com/privacy-policy/7881906">Privacy policy</a></li>
                     <li><a class="text-muted" href="#">Termini e condizioni</a></li>
                     <li><a class="text-muted" href="#"></a></li>
                 </ul>
@@ -307,7 +307,7 @@
             <div class="col-12 col-md">
                 <img class="mb-2  rounded mx-auto d-block"
                      src="https://getbootstrap.com/assets/brand/bootstrap-solid.svg" alt="" width="24" height="24">
-                <small class="d-block mb-3 text-muted" style="text-align: center">© 2017-2018</small>
+                <small class="d-block mb-3 text-muted" style="text-align: center">© 2015-2018</small>
                 <small class="d-block mb-3 text-muted tip" style="text-align: center">Creata con <i class="fas fa-heart"
                                                                                                     style="color: firebrick;"></i>
                     da andreacw
