--- a/pages/homepage/main.html
+++ b/pages/homepage/main.html
@@ -196,28 +196,14 @@
         <!-- Three columns of text below the carousel -->
         <div class="container">
             <!-- Example row of columns -->
-            <div class="row">
-                <div class="col-md-4">
+            <div class="row" id="appendHeadingTopic">
+                <!--<div class="col-md-4">
                     <h2 class="worksans">HEADING</h2>
                     <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor
                         mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada
                         magna mollis euismod. Donec sed odio dui. </p>
                     <p><a class="btn btn-outline-light" href="#" role="button">Continua &raquo;</a></p>
-                </div>
-                <div class="col-md-4">
-                    <h2 class="worksans">HEADING</h2>
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor
-                        mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada
-                        magna mollis euismod. Donec sed odio dui. </p>
-                    <p><a class="btn btn-outline-light" href="#" role="button">Continua &raquo;</a></p>
-                </div>
-                <div class="col-md-4">
-                    <h2 class="worksans">HEADING</h2>
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor
-                        mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada
-                        magna mollis euismod. Donec sed odio dui. </p>
-                    <p><a class="btn btn-outline-light" href="#" role="button">Continua &raquo;</a></p>
-                </div>
+                </div>-->
             </div>
 
         </div> <!-- /container -->
