footer for staff news

--- a/pages/homepage/main.html
+++ b/pages/homepage/main.html
@@ -181,13 +181,18 @@
             <div class="col-md-5">
                 <strong class="d-inline-block">Server: <span id="alirservericon"> <span class="aliruser">--</span>/<span
                         class="alirmaxuser">100 </span></span></strong>
-                <span> Slot <span class="hideonphone">- Ip: <span class="aliraddress">---.---.---.--</span>:<span class="alirport">2302</span></span></span>
-                <a title="Altre informazioni"  data-toggle="modal" data-target="#serverDataModal" class="infolink"><i style="" class="fas fa-info"></i></a>
-                <a title="Connettiti al server" href="steam://rungameid/107410// +connect 145.239.149.40:2302" rel="external nofollow" style="padding-left: 5px;"><i style="" class="fas fa-external-link-alt"></i></a>
+                <span> Slot <span class="hideonphone">- Ip: <span class="aliraddress">---.---.---.--</span>:<span
+                        class="alirport">2302</span></span></span>
+                <a title="Altre informazioni" data-toggle="modal" data-target="#serverDataModal" class="infolink"><i
+                        style="" class="fas fa-info"></i></a>
+                <a title="Connettiti al server" href="steam://rungameid/107410// +connect 145.239.149.40:2302"
+                   rel="external nofollow" style="padding-left: 5px;"><i style="" class="fas fa-external-link-alt"></i></a>
             </div>
             <div class="col-md-5">
-                <strong class="d-inline-block">Teamspeak: <span style="color: #4CAF50">256</span></strong> Slot <span class="hideonphone">- Ip: <span>TS.ALIR.EU</span></span>
-                <a title="Connettiti al ts" href="ts3server://ts.alir.eu" rel="external nofollow" style="padding-left: 5px;"><i style="" class="fas fa-external-link-alt"></i></a>
+                <strong class="d-inline-block">Teamspeak: <span style="color: #4CAF50">256</span></strong> Slot <span
+                    class="hideonphone">- Ip: <span>TS.ALIR.EU</span></span>
+                <a title="Connettiti al ts" href="ts3server://ts.alir.eu" rel="external nofollow"
+                   style="padding-left: 5px;"><i style="" class="fas fa-external-link-alt"></i></a>
             </div>
         </div>
     </div>
@@ -230,11 +235,6 @@
                                     lead-in to additional content.</p>
                                 <a href="#">Continua a leggere... <i class="fas fa-external-link-alt"></i></a>
                             </div>
-                            <img class="card-img-right flex-auto d-none d-md-block"
-                                 data-src="holder.js/200x250?theme=thumb"
-                                 alt="Thumbnail [200x250]" style="width: 200px; height: 250px;"
-                                 src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22200%22%20height%3D%22250%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20200%20250%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_1623d955d74%20text%20%7B%20fill%3A%23eceeef%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A13pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_1623d955d74%22%3E%3Crect%20width%3D%22200%22%20height%3D%22250%22%20fill%3D%22%2355595c%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2255%22%20y%3D%22131%22%3EThumbnail%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
-                                 data-holder-rendered="true">
                         </div>
                     </div>-->
                 </div>
@@ -267,25 +267,33 @@
                     <li><a class="text-muted" href="https://www.alir.eu/alirschool/">Guida</a></li>
                     <li><a class="text-muted" href="https://www.alir.eu/forum/112-annunci/">Annunci dello staff</a></li>
                     <li><a class="text-muted" href="https://www.alir.eu/forum/216-server/">Sviluppo del server</a></li>
-                    <li><a class="text-muted" href="https://www.alir.eu/tracker/bug-e-segnalazioni/problemi-e-bug/">Segnala un bug!</a></li>
+                    <li><a class="text-muted" href="https://www.alir.eu/tracker/bug-e-segnalazioni/problemi-e-bug/">Segnala
+                        un bug!</a></li>
                 </ul>
             </div>
             <div class="col-6 col-md">
                 <h5><i class="fas fa-clipboard"></i> Moduli</h5>
                 <ul class="list-unstyled text-small">
-                    <li><a class="text-muted" href="https://www.alir.eu/forms/2-richiesta-ban/">Richiesta di ban</a></li>
-                    <li><a class="text-muted" href="https://www.alir.eu/forms/3-richiesta-unban/">Richiesta di unban</a></li>
-                    <li><a class="text-muted" href="https://www.alir.eu/forms/6-appello-permabannati-dopo-6-mesi/">Richiesta di appello (6 Mesi)</a></li>
-                    <li><a class="text-muted" href="https://www.alir.eu/forms/4-richiesta-di-rimborso/">Richiesta di rimborso</a></li>
-                    <li><a class="text-muted" href="https://www.alir.eu/forms/7-richiesta-di-rimborso-abitazioni/">Richiesta di rimborso (Casa)</a></li>
-                    <li><a class="text-muted" href="https://www.alir.eu/forms/10-modulo-richiesta-base/">Richiedi una base</a></li>
+                    <li><a class="text-muted" href="https://www.alir.eu/forms/2-richiesta-ban/">Richiesta di ban</a>
+                    </li>
+                    <li><a class="text-muted" href="https://www.alir.eu/forms/3-richiesta-unban/">Richiesta di unban</a>
+                    </li>
+                    <li><a class="text-muted" href="https://www.alir.eu/forms/6-appello-permabannati-dopo-6-mesi/">Richiesta
+                        di appello (6 Mesi)</a></li>
+                    <li><a class="text-muted" href="https://www.alir.eu/forms/4-richiesta-di-rimborso/">Richiesta di
+                        rimborso</a></li>
+                    <li><a class="text-muted" href="https://www.alir.eu/forms/7-richiesta-di-rimborso-abitazioni/">Richiesta
+                        di rimborso (Casa)</a></li>
+                    <li><a class="text-muted" href="https://www.alir.eu/forms/10-modulo-richiesta-base/">Richiedi una
+                        base</a></li>
                 </ul>
             </div>
             <div class="col-6 col-md">
                 <h5><i class="fas fa-user-secret"></i> Team</h5>
                 <ul class="list-unstyled text-small">
                     <li><a class="text-muted" href="https://www.alir.eu/staff/">Lo staff</a></li>
-                    <li><a class="text-muted" href="https://www.iubenda.com/privacy-policy/7881906">Privacy policy</a></li>
+                    <li><a class="text-muted" href="https://www.iubenda.com/privacy-policy/7881906">Privacy policy</a>
+                    </li>
                     <li><a class="text-muted" href="#">Termini e condizioni</a></li>
                     <li><a class="text-muted" href="#"></a></li>
                 </ul>
@@ -332,8 +340,11 @@
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item">Uptime: <span id="appendUptime"></span></li>
                             <li class="list-group-item">Rank server: <span id="alirrank"></span></li>
-                            <li class="list-group-item"><a href="https://www.alir.eu/alirschool/altislife/connessione-al-server-r19/">Vai alla guida alla connessione <i class="fas fa-external-link-alt"></i></a></li>
-                            <li class="list-group-item"><a id="arma3serverurl">Vai alla pagina di Arma3Server <i class="fas fa-external-link-alt"></i></a></li>
+                            <li class="list-group-item"><a
+                                    href="https://www.alir.eu/alirschool/altislife/connessione-al-server-r19/">Vai alla
+                                guida alla connessione <i class="fas fa-external-link-alt"></i></a></li>
+                            <li class="list-group-item"><a id="arma3serverurl">Vai alla pagina di Arma3Server <i
+                                    class="fas fa-external-link-alt"></i></a></li>
                         </ul>
                     </div>
                 </div>
